Added charset check and hint in startup logs (related to #7020)